# router/pastes.go
@@ -19,6 +19,7 @@ func RegisterPasteRoutes(rg *gin.RouterGroup, db *gorm.DB) {
 		pastes.POST("", pasteHandlers.CreatePaste)
 		pastes.GET("/all", pasteHandlers.ListPastes)
 		pastes.GET("/:id", pasteHandlers.GetPaste)
+		pastes.GET("/private/:accessId", pasteHandlers.GetPasteByPrivateAccessID)
 		pastes.PUT("", pasteHandlers.UpdatePaste)
 		pastes.DELETE("/:id", pasteHandlers.DeletePaste)
 	}
